--- a/styles.css
+++ b/styles.css
@@ -1,131 +1,142 @@
-@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&display=swap");
-
 :root {
-  --space-cadet: #035f47;
-  --space-cadet-dark: #18b68c;
-  --lavender-blue: #e4d9ff;
+  --primary: #ea40a4;
+  --business: #3a82ee;
+  --personal: #ea40a4;
+  --light: #eee;
+  --dark: #313154;
+  --grey: #888;
+  --danger: #ff5b57;
+
+  --shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+
+  --business-glow: 0px, 0px, 4px rgba(58, 130, 238, 0.75);
+  --personal-glow: 0px, 0px, 4px rgba(234, 64, 164, 0.75);
 }
 * {
-  padding: 0;
   margin: 0;
+  padding: 0;
   box-sizing: border-box;
-  font-family: "Open Sans", sans-serif;
+  font-family: "montserrat", sans-serif;
 }
-nav {
-  background-color: #002e22;
-  width: 100%;
-  height: 120px;
-  display: flex;
-  align-items: center;
-  position: fixed;
-  font-size: 30px;
-  text-align: center;
-  flex-direction: column;
-  padding: 10px 0;
-}
-small {
-  font-size: 15px;
-  color: #fff;
-  font-style: italic;
-  margin-top: -10px;
+input:not([type="radio"]):not([type="checkbox"]),
+button {
+  appearance: none;
+  border: none;
+  outline: none;
+  background: none;
+  cursor: initial;
 }
 body {
-  line-height: 1.6;
-  background: var(--space-cadet-dark);
-  font-size: 1.05rem;
+  background: var(--light);
+  color: var(--dark);
 }
-.center {
+section {
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+}
+
+h3 {
+  color: var(--dark);
+  font-size: 1rem;
+  font-weight: 400;
+  margin-bottom: 0.5rem;
+}
+h4 {
+  color: var(--grey);
+  font-size: 0.875rem;
+  font-weight: 700;
+  margin-bottom: 0.5rem;
+}
+
+.greeting .title {
+  display: flex;
+}
+.greeting .title input {
+  margin-left: 0.5rem;
+  flex: 1 1 0%;
+  min-width: 0;
+}
+.greeting .title,
+.greeting .title input {
+  color: var(--dark);
+  font-size: 1.5rem;
+  font-weight: 700;
+}
+
+.create-todo input[type="text"] {
+  display: block;
+  width: 100%;
+  font-size: 1.125rem;
+  padding: 1rem 1.5rem;
+  color: var(--dark);
+  background-color: #fff;
+  border-radius: 0.5rem;
+  box-shadow: var(--shadow);
+  margin-bottom: 1.5rem;
+}
+
+.create-todo .options {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 1rem;
+  margin-bottom: 1.5rem;
+}
+
+.create-todo .options label {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 1.5rem;
+  background-color: #fff;
+  border-radius: 0.5rem;
+  box-shadow: var(--shadow);
+  cursor: pointer;
+}
+
+input[type="radio"],
+input[type="checkbox"] {
+  display: none;
+}
+
+.bubble {
   display: flex;
   align-items: center;
   justify-content: center;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  border: 2px solid var(--business);
+  box-shadow: var(--business-glow);
 }
-.container {
-  min-height: 100vh;
+
+.bubble.personal {
+  border-color: var(--personal);
+  box-shadow: var(--personal-glow);
 }
-.bill-divider-wrapper {
-  max-width: 1080px;
-  margin-top: 130px;
-  background: #fff;
-  overflow: hidden;
-}
-.title {
-  background: var(--space-cadet);
-  padding: 0, 7rem 0;
-  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.3);
-}
-h1 {
-  color: #fff;
-}
-.title h2 {
-  text-align: center;
-  color: #fff;
-}
-.bills-inputs,
-.bill-output {
-  padding: 2rem 2.5rem;
-}
-.bill-inputs {
-  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
-}
-.form-group {
-  padding: 0.5rem 0;
-}
-.form-group label {
-  text-transform: uppercase;
-  display: inline-block;
-  padding: 0.2rem;
-}
-.form-control {
-  width: 100%;
-  font-size: 1rem;
-  padding: 0.5rem;
-  border: none;
-  border-bottom: 1.5px solid var(--space-cadet);
-  transition: all 0.4s ease;
-  -webkit-transition: all 0.4s ease;
-  -moz-transition: all 0.4s ease;
-  -ms-transition: all 0.4s ease;
-  -o-transition: all 0.4s ease;
-}
-.form-control:focus {
-  outline: 0;
-  border-color: var(--space-cadet);
-}
-#calc-btn, #clear-btn {
-  padding: 0.9rem 2.2rem;
-  font-size: 1.05rem;
-  text-transform: uppercase;
+
+.bubble::after {
+  content: "";
   display: block;
-  margin-top: 1.25rem;
-  background: var(--space-cadet);
-  color: #fff;
-  border: none;
-  cursor: pointer;
-  transition: all 0.4s ease;
-  --webkit-transition: all 0.4s ease;
-  --moz-transition: all 0.4s ease;
-  --ms-transition: all 0.4s ease;
-  --o-transition: all 0.4s ease;
+  opacity: 0;
+  width: 0px;
+  height: 0px;
+  background-color: var(--business);
+  box-shadow: var(--business-glow);
+  border-radius: 50%;
+  transition: 0.2s ease-in-out;
 }
-#calc-btn:focus, #clear-btn:focus {
-  outline: 0;
+
+
+.bubble.personal::after {
+  background-color: var(--personal);
+  box-shadow: var(--personal-glow);
 }
-#calc-btn:hover, #clear-btn:hover {
-  background: var(--space-cadet-dark);
-}
-.text-group {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 0.3rem 0;
-}
-.text-group h3 {
-  font-weight: 400;
-  opacity: 0.8;
-}
-.text-group:nth-child(1) h3 {
-  font-weight: 700;
-}
-.text-group span {
-  font-weight: 600;
+
+input:checked ~ .bubble::after {
+    width: 10px;
+    height: 10px;
+    opacity: 1;
 }
